# advent-of-code-2016

./: COPYING  README.md  mkday.sh  process-aoc.sh  rust-aoc.p.md
day01/: Cargo.toml  README.md  input.txt  part1.md  part1.rs  part2.md  part2.rs  soln.rs
day02/: Cargo.toml  README.md  board2.txt  input.txt  part1.md  part1.rs  part2.md  part2.rs  soln.rs
day03/: Cargo.toml  README.md  part1.md  part1.rs  part2  part2.md  part2.rs  soln.rs
day04/: Cargo.toml  README.md  part1.md  part1.rs  part2.md  part2.rs  soln.rs
day05/: Cargo.toml  README.md  part1  part1.md  part1.rs  part2  part2.md  part2.rs  soln.rs
day06/: Cargo.toml  README.md  part1  part1.md  part1.rs  part2.md  part2.rs  soln.rs
day07/: Cargo.toml  README.md  part1.md  part1.rs  part2.md  part2.rs  soln.rs
day08/: Cargo.toml  README.md  part1.md  part2.md  soln.rs
day09/: Cargo.toml  README.md  part1.md  part1.rs  part2.md  part2.rs  soln.rs  test7.txt  test9.txt
day10/: Cargo.toml  README.md  part1.md  part2.md  soln.rs
day11/: Cargo.toml  README.md  input2.txt  part1.md  part2.md  soln.rs
day12/: README.md  input2.txt  part1.md  part2.md  soln.rs
day13/: Cargo.toml  README.md  part1.md  part2.md  soln.rs
day14/: Cargo.toml  README.md  part1.md  part2.md  soln.rs
day15/: Cargo.toml  README.md  input2.txt  part1.md  part2.md  soln.py  soln.rs
day16/: Cargo.toml  README.md  part1.md  part2.md  soln.rs
day17/: Cargo.toml  README.md  part1.md  part2.md  soln  soln.rs
day18/: Cargo.toml  README.md  part1.md  part2.md  soln.rs  test1.txt
day19/: Cargo.toml  (+8 more)
libaoc/: Cargo.toml  README.md  aoc.rs  args.rs  asm.rs  astar.rs  bits.rs  choose.py  dirns.rs  hex.rs  lines.rs  mod.rs  sets.rs
(+47 files in other folders)
