# Copyright © 2016 Bart Massey
# This program is licensed under the "MIT License".
# Please see the file COPYING in this distribution
# for license terms.

[package]
name = "soln"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
publish = false
description = "Solution to Advent of Code 2016 problem."
repository = "http://github.com/BartMassey/advent-of-code-2016"
readme = "README.md"
license = "MIT"

[[bin]]
name = "part1"
path = "part1.rs"

[[bin]]
name = "part2"
path = "part2.rs"

[dependencies]
rust-crypto = "0.2"
