# Copyright © 2016 Bart Massey
# This program is licensed under the "MIT License".
# Please see the file COPYING in this distribution
# for license terms.

[package]
name = "libaoc"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
publish = false
description = "Library for Advent of Code 2016 solutions."
repository = "http://github.com/BartMassey/advent-of-code-2016"
readme = "README.md"
license = "MIT"

[lib]
name = "aoc"
path = "mod.rs"

[dev-dependencies]
rand = "0.3"
